pkg/lang/testdata/ub/config/valid/input-two-bindings.ub
factory: {
  inputs: { xs: [for i, n in [10, 20]: n] }
}
