pkg/lang/testdata/ub/config/invalid/input-reference-in-comprehension-source.ub
inputs: { x: [for n in var.xs: n] }
